--- a/platformio.ini
+++ b/platformio.ini
@@ -24,9 +24,8 @@ monitor_speed = 115200
 ;this section has config items common to all ESP32 boards
 [espressif32_base]
 platform = espressif32
-build_unflags = -Werror = reorder
-;board_build.partitions = min_spiffs.csv
-monitor_filters = esp32_exception_decoder
+;build_unflags = -Werror = reorder
+;monitor_filters = esp32_exception_decoder
 
 
 
@@ -35,13 +34,16 @@ extends = espressif32_base
 board = um_tinys3
 upload_speed = 921600
 ;board_build.partitions = no_ota.csv
+board_build.partitions = default_16MB.csv
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
 build_flags = 
-	-DREMOTE_DEBUG
-	-DARDUINO_USB_CDC_ON_BOOT
-	-DLV_CONF_INCLUDE_SIMPLE
-	-DLV_COMP_CONF_INCLUDE_SIMPLE
-	-DLV_LVGL_H_INCLUDE_SIMPLE
-	-DBOARD_HAS_PSRAM
+	-D ARDUINO_USB_MODE=0
+    -D ARDUINO_USB_CDC_ON_BOOT=0
+	-D LV_CONF_INCLUDE_SIMPLE
+	-D LV_COMP_CONF_INCLUDE_SIMPLE
+	-D LV_LVGL_H_INCLUDE_SIMPLE
+	-D BOARD_HAS_PSRAM
 	;-DDEBUG_TOUCH
 	-mfix-esp32-psram-cache-issue
 	-I src/ui/
